# beamRadSim

./: BeamRad.cc  CMakeLists.txt  EDepPiProb.C  EDepPiProbAll.C  EDepPiProbCum.C  FindROOT.cmake  MacroCheckPackageLibs.cmake  MacroCheckPackageVersion.cmake  MacroParseArguments.cmake  README.md
OpticalData/: EJ200ScintSpectrum.txt  PMTAngularSpec.txt  PMT_ET9814B_QE.txt  PMT_R1332_QE.txt  PMT_R7725_QE.txt  PMT_R878_QE.txt  PMT_R878_QE_orig.txt
include/: EventLinkDef.hh  brDetectorConstruction.hh  brEventAction.hh  brGammaTrack.hh  brGenFileName.hh  brHistoManager.hh  brMuonTrack.hh  brNeutronTrack.hh  brPMTHit.hh  brPMTRHit.hh  brPMTSD.hh  brPhotonTrack.hh  brPixelParameterisation.hh  brPrimaryGeneratorAction.hh  brPrimaryGeneratorActionMessenger.hh  brROOTEvent.hh  brRunAction.hh  brRunActionMessenger.hh  brScintHit.hh  brScintRHit.hh  brScintSD.hh  brSession.hh  brSessionMessenger.hh  brShieldingPhysicsList.hh  brStackingAction.hh  brSteppingAction.hh  brSteppingMessenger.hh  brSteppingVerbose.hh  brTrackingAction.hh  brUserEventInformation.hh  brUserTrackInformation.hh
include/oldinclude/: EventLinkDef.hh  brBarParameterisation.hh  brPMTParameterisation.hh
macros/: .directory  .fuse_hidden000005e700000002  .nfs00000000009c785b0000034a  .nfs00000000009d928d00000361  .nfs00000000009db5c200000370  .nfs00000000009db7a900000371  EDep2.C  EDep3.C  EDep4.C  EDepPi.C  EDepPiProb.C  EDepPiSimp.C  EDepPlot.C  MIPHeatMap.C  MIPHeatMap10cm.C  MIPHeatMap50cm.C  ScintDep.C  absorberDisplay.C  absorberEnergyDisplay.C  absorberEnergyMax.C  absorberEvt.C  absorberEvt2D.C  absorberGrid.C  absorberGrid2.C  absorberGridPi.C  absorberZ.C  gammaEDepElectronCount.C  gammaEDepElectronCount_multiAbsorber.C  gammaEDepElectronCount_multiSpec.C  gammaEDepElectronCount_multiSpec_3Stack.C  gammaEDepElectronCount_multiSpec_3Stack_depNum.C  gammaEDepElectronCount_multiSpec_3Stack_smear2.C  gammaEDepElectronCount_multiSpec_3Stack_smear3.C  gammaEDepElectronCount_multiSpec_5Stack_depNum.C  gammaEDepElectronCount_multiSpec_5Stack_smear3.C  gammaEDepElectronCount_scintVeto_multiSpec_5Stack_smear3.C  gammaEDepPostSteel.C  gammaEDepPreSteel.C  gammaEnergySpec.C  libBeamRadDict.rootmap  (+2 more)
macros/.svn/: all-wcprops  entries
macros/.svn/text-base/: LED.mac.svn-base  ambientN_Th.mac.svn-base  drawGeom.mac.svn-base  muonShower.mac.svn-base  muonShower_vis.mac.svn-base  muonZenith.mac.svn-base  muonZenith_vis.mac.svn-base
macros/rootMac/: .photonZPos.C.swp  AutoDict_vector_mqPhotonTrack__.cxx  AutoDict_vector_mqPhotonTrack___cxx.d  AutoDict_vector_vector_int_allocator_int_____.cxx  AutoDict_vector_vector_int_allocator_int______cxx.d  BarBackHits.C  BarBackHits_PMTAttempt.C  BarBackMidHits.C  BarMidHitsMuon.C  BarNo12Hits.C  LowTailPhotonYield.C  MuonPMTHit.C  MuonTrigPECount.C  NbPMTHits.C  SlabEventCut.C  gammaEDepElectronCount_multiAbs.C  muonFit.C  rawAreaPlot.C
macros/rootMac/old/: .PMT_XY.C.swp  .muonFit.C.swp  CaptureAtomicNum.C  EnergyDeposition.C  FiberPhotonReflections.C  GammaEnergyDep.C  GammaPMTHit.C  MuonEnergyDep.C  MuonTrigPhotonCountSpectrum.C  MuonTrigPhotonCountSpectrumNew.C  MuonTrigPhotonCountSpectrumOld.C  PECountSpectrum.C  PMTWavelengthSpectrum.C  PMTWavelengthSpectrum_nondegenerate.C  PMT_XY.C  PhotonReflections.C  Plot2D.C  TotalPEinAPD.C  WLSEfficiencyCurves.C  WLSWavelengthCuts.C  (+14 more)
macros/runMac/: drawGeom.mac  muonZenith.mac  muonZenith_vis.mac  muon_no_vis.mac  quickmuon.mac
runMac/: Am241_xray_no_vis.mac  Cf252_vis.mac  MonoEnergy.mac  beta_no_vis.mac  default_no_vis.mac  e_no_vis.mac  electron_no_vis.mac  ex3.mac  muon_no_vis.mac  pion_no_vis.mac  proton_no_vis.mac  quicke.mac  quickmuon.mac  quickmuon15.mac  quickmuon_pencil.mac  quickmuonflat.mac  quickxray.mac  specmuon15_no_vis.mac  specmuon_no_vis.mac  specmuonflat_no_vis.mac  specmuoniso_no_vis.mac  specmuonsin_no_vis.mac  vis.mac  visMovieCosmic.mac  visMovieRun.mac  visMovieRunBeam.mac  visMovieRunBench.mac  visMovieRunCosmic.mac  visMovieSave.mac  visMovieSaveBench.mac  visMovieSaveCosmic.mac  xray_no_vis_10xBackground.mac  xray_no_vis_10xLessBackground.mac  xray_no_vis_LYSO.mac  xray_no_vis_postSteel0p5cm.mac  xray_no_vis_postSteel1cm.mac  xray_no_vis_preSteel.mac
src/: .brStackingAction.cc.swp  FileDescription.txt  brDetectorConstruction.cc  brDetectorConstruction.cc.ETL  brDetectorConstruction.cc.MTD  brDetectorConstruction.cc.PbAbsGeo.Jul5_21  brDetectorConstruction.cc.cryo  brDetectorConstruction.cc.testold  brEventAction.cc  brGenFileName.cc  brPMTHit.cc  brPMTSD.cc  brPhotonTrack.cc  brPrimaryGeneratorAction.cc  brPrimaryGeneratorActionMessenger.cc  brROOTEvent.cc  brRunActionMessenger.cc  brScintHit.cc  brScintRHit.cc  brScintSD.cc  brSession.cc  brSessionMessenger.cc  brShieldingPhysicsList.cc  brStackingAction.cc  brSteppingAction.cc  brSteppingMessenger.cc  brUserEventInformation.cc
src/old/: brDetectorConstruction.cc  brDetectorConstruction_default.cc.old
src/oldall/: brDetectorConstruction.cc  brEventAction.cc  brGammaTrack.cc  brHistoManager.cc  brMuonTrack.cc  brNeutronTrack.cc  brPMTRHit.cc  brPixelParameterisation.cc  brROOTEvent.cc  brRunAction.cc  brScintHit.cc  brScintSD.cc  brShieldingPhysicsList.cc  brSteppingAction.cc  brSteppingVerbose.cc  brTrackingAction.cc  brUserEventInformation.cc  brUserTrackInformation.cc
src/oldgeo/: brDetectorConstruction.cc.2d  brDetectorConstruction.cc.MTDonly  brDetectorConstruction.cc.May1  brDetectorConstruction.cc.PCBold  brDetectorConstruction.cc.StackNoPix  brDetectorConstruction.cc.fullStack  brDetectorConstruction.cc.nut  brDetectorConstruction.cc.upAndDownstreamGeoJun29  brDetectorConstruction_enigLyso.cc.old
src/oldsource/: brBarParameterisation.cc  brPMTParameterisation.cc
